style.css
/* ... */
.easy_style_block .textblock p
{
	font-family: "GSMT";
	font-size: 18px;
	line-height: 22px;
	color: #000;
	margin: 0px;
}

.easy_style_block .textblock p a
{
	color: #000;
	text-decoration: none;
}

.easy_style_block .thumbblock
{
	float: right;
	width: 100%;
	max-width: 50%;
	padding: 0px;
	text-align: right;
	height: 203px;
}

.home .tp-parallax-wrap
{
	left: 0px !important;
	width: 100% !important;
	top: auto !important;
	bottom: 0px !important;
}

.home .tp-parallax-wrap .tp-mask-wrap 
{
	width: 100% !important;
}

.home .tp-parallax-wrap .tp-mask-wrap .tp-caption.tp-shape.tp-shapewrapper
{
	bottom: 110px !important;	
}

.home .rev_slider .tp-mask-wrap .tp-caption.button-second
{
	position: absolute;
	right: 3em;
	bottom: 35px;
}

.home .tp-caption.excerpt.fullwidthcaptionholder
{
	position: absolute;
	left: 2em;
	bottom: 35px;
}

.home .rev_slider .tp-mask-wrap .tp-caption.button-first
{
	position: absolute;
	right: 15em;
	bottom: 35px;
}

.site-footer
{
	background: rgb(239, 239, 239);
}

.site-footer, .site-footer a
{
	color: #555;
}

@media screen and (max-width: 1260px)
{
	.home .tp-parallax-wrap .tp-mask-wrap .tp-caption.tp-shape.tp-shapewrapper
	{
		bottom: 170px !important;
		height: 170px !important;
		max-height: 170px !important;
	}	
	
	.home .tp-caption.excerpt.fullwidthcaptionholder
	{
		bottom: 65px !important;
	}
	
	.home .rev_slider .tp-mask-wrap .tp-caption.button-first
	{
		left: 40px;
		right: auto;
	}
	
	.home .rev_slider .tp-mask-wrap .tp-caption.button-second
	{
		right: auto;
		bottom: 35px;
		left: 355px;
	}			
}		

@media screen and (max-width: 1330px) and (min-width: 1260px) {
	.main-navigation li.nm.menu-item {
	    padding: 0px 0.75em;
	}
}


@media screen and (max-width: 1259px) and (min-width: 999px) {
	#site-navigation
	{
		width: 100% !important;
	}
	
	.main-navigation #menu-main-menu > li:first-child
	{
		padding-left: 1.5em;
		border-left: 0px solid #FFF;
	}
	
	.main-navigation
	{
		background: none;	
	}
	
	.menu-main-menu-container {
	    margin-left: 0px;
	    margin-bottom: 54px;
	}
	
	.main-navigation li.brochure-request
	{
		padding-left: 1em;
	}
	
	.site-content
	{
		margin-top: 90px !important;
	}
}

@media screen and (max-width: 999px) {
	.easy_style_block
	{
		margin-bottom: 30px;
	}
	.easy_style_block .textblock
	{
		float: none;
		width: 100%;
		max-width: 100%;
		margin-bottom: 0px;
		text-align: center;
	}
	
	.easy_style_block .thumbblock
	{
		float: none;
		width: 100%;
		max-width: 100%;
		padding: 5px 20px 20px;
		text-align: center;
	}
	
	
	
}
	
@media screen and (max-width: 767px) {
	
	.main-navigation li a
	{
		color: #fff !important;
	}		
	/*	
	.home .tp-caption.excerpt .fullwidthcaption
	{
		margin-top: 40px !important;
		text-align: center;
	}


	.home .tp-caption.BUTTON a
	{
		font-size: 11px !important;
    	padding: 3px 5px !important;
    	border: 1px solid #919191 !important;
    	text-transform: uppercase !important;
    	color: #000 !important;
    	text-decoration: none !important;
    	font-family: "GSMT";
    }
    
    .home .tp-caption.excerpt {
    	font-size: 28px !important;
    	line-height: 32px !important;
    }
    */
   
    .main-navigation li.where-to-buy, .main-navigation li.brochure-request
    {
    	float: none;
    	width: 100%;
    	color: #fff;
    }
    
    
    .installation-cta 
    {
    	border: 0px solid #FFF;
    	text-align: center;
    }
    
    
    .online-retailers-block .eachOnlineRetailers
    {
    	float: none;
    	width: 100%;
    	margin: 20px 0px !important;
    	min-height: 80px;
    }
    
    .main-navigation li ul.sub-menu a, .main-navigation li a
    {
    	color: #000 !important;
    }
}	

@media screen and (max-width: 1080px) {
	.online-retailers-block .eachOnlineRetailers
    {
    	float: none;
    	width: 100%;
    	margin: 20px 0px !important;
    	min-height: 80px;
    }
}	


@media screen and (max-width: 590px) {
	
	.home .tp-caption.excerpt.fullwidthcaptionholder
	{
		bottom: 90px !important;
	}
	
	.home .rev_slider .tp-mask-wrap .tp-caption.button-first
	{
		bottom: 82px;
	}
	
	.home .rev_slider .tp-mask-wrap .tp-caption.button-second
	{
		bottom: 27px;
		left: 40px;
	}	
}	

